--- a/farlo/backend/package.json
+++ b/farlo/backend/package.json
@@ -29,8 +29,10 @@
     "node-fetch": "^3.3.2"
   },
   "dependencies": {
-    "express": "^4.21.0",
+    "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"
+    "express": "^4.21.0",
+    "node-cron": "^3.0.3"
   }
 }
